Changes in: Mail::Log::Parse
    April 17, 2009 (1.4.0) - Simplified subclassing: No longer need to call
    "_set_current_position_as_next_line" in subclass. (A stub exists for
    backwards compatibility.)

    April 9, 2009 (1.3.1) - Documentation fixes, better handling of trying
    to work without a valid logfile.

    Dec 23, 2008 (1.3.0) - Further code speedups. Now stores a cache of the
    refaddr for easy and quick access.

    Dec 09, 2008 (1.2.10) - Profiled and sped up code. (Cut processing time
    in half for some cases.)

    Nov 28, 2008 - Documentation fixes.

    Nov 18, 2008 - Now buffers reading, and prefers data from the buffer.

    Oct 24, 2008 - File::Temp now optional; only required for uncompressed
    files. Added go_to_line_number for slightly better functionality.

    Oct 14, 2008 - Found that I need File::Temp of at least version 0.17.

    Oct 13, 2008 - Fixed tests so they do a better job of checking if they
    need to skip.

    Oct 6, 2008 - Initial version.

Changes in: Mail::Log::Parse::Postfix
    April 17, 2009 (1.5.1) - No longer uses
    "_set_current_position_as_next_line", instead lets Mail::Log::Parse
    manage automatically. (Requires 1.4.0.)

    April 9, 2009 (1.5.0) - Now reads the connecting host from the 'connect'
    and 'disconnect' lines in the log.

    Feb 27, 2009 (1.4.12) - Quieted an occasional error, if the log line
    doesn't have the standard Postfix format.

    Dec 23, 2008 (1.4.11) - Further speedups. Now requires Mail::Log::Parse
    of at least version 1.3.0.

    Dec 09, 2008 (1.4.10) - Profiled code, did some speedups. Added
    dependency on Memoize: For large logs this is a massive speedup. For
    extremely sparse logs it may not be, but sparse logs are likely to be
    small.

    Nov 28, 2008 - Switched 'total_delay' to slightly more universal
    'delay'. Sped up some regexes.

    Nov 11, 2008 - Switched to using the bufferable "_parse_next_line"
    instead of the unbuffered "next".
