@@ -2,6 +2,6 @@
 
 use Test::More;
 eval { require Test::Kwalitee };
-plan skip_all => 'Author tests.' unless ( getpwuid($<) eq 'dstaal' or getpwuid($<) eq 'dtstaal' );
+plan skip_all => 'Author tests.' unless ( $ENV{RELEASE_TESTING} );
 plan( skip_all => 'Test::Kwalitee not installed; skipping' ) if $@;
 Test::Kwalitee->import();
